It's all coming together